fix: home zeppelin, home cover, and home orglist redesign fix + minor changes
- added custom scrollbar for chromium based browser in dashboard sidebar
- changed sidebar routing to NavLink
- fix positioning of faq section in beranda page
- changed swal fire into toast for successful operation on dashboard + history.push on edit pages
- fix tanggalLahir bug on edit akun mahasiswa page
- fixed home cover inner container width
- fixed home zeppelin back and next button
- fixed home orglist scaling and border width

--- a/src/shared/component/DashboardNavigation/DashboardNavigation.scss
+++ b/src/shared/component/DashboardNavigation/DashboardNavigation.scss
@@ -114,6 +114,20 @@ body {
   overflow-x: hidden;
   scrollbar-width: thin;
 
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #172138;
+    border-radius: 5px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #74c8b9;
+    border-radius: 5px;
+  }
+
   color: #ffffff;
 }
 
