--- a/src/views/home/HomeOrganisatorList/HomeOrganisatorList.scss
+++ b/src/views/home/HomeOrganisatorList/HomeOrganisatorList.scss
@@ -1,7 +1,7 @@
 :root {
   --home-orglist-grid-header-p: 2rem;
   --home-orglist-grid-header-mb: 1rem;
-  --home-orglist-text-p-fontsize: 1.1rem;
+  --home-orglist-text-p-fontsize: 1rem;
 }
 
 .home-orglist-outer_container p {
@@ -13,23 +13,16 @@
   font-family: Rubik, Arial, Helvetica, sans-serif;
 }
 
-.home-orglist-outer_container {
-  min-height: 100vh;
-}
-
 .home-orglist-inner_container {
   background-color: #fff;
 }
 
 .home-orglist-outer_container {
   width: 100%;
-  min-height: 100vh;
   align-items: center;
 
   & > .home-orglist-inner_container {
-    width: 95%;
-    min-height: 92vh;
-    border-radius: 50px;
+    border-radius: 1rem;
 
     flex-direction: column;
     align-items: center;
@@ -53,7 +46,7 @@
     grid-area: chapLogo;
 
     & > img {
-      width: 200px;
+      width: 150px;
     }
   }
 
@@ -65,7 +58,7 @@
 .home-orglist-chap-desc {
   min-height: max-content;
 
-  padding: 1.5rem;
+  padding: 1.2rem;
   border-radius: 30px;
 
   display: grid;
@@ -93,8 +86,9 @@
 }
 
 .home-orglist-content_container {
-  width: 60%;
-  height: 50vh;
+  width: 50%;
+  height: 40vh;
+  padding-left: 20px;
 
   scrollbar-width: thin;
   scrollbar-color: rgb(255, 208, 8) #1f2c4c;
@@ -120,24 +114,25 @@
   overflow-x: hidden;
 
   & > .home-orglist-content-grid {
-    grid-template-columns: max-content 45rem max-content;
+    grid-template-columns: max-content 40rem max-content;
     column-gap: 1.5rem;
 
     margin: 1rem 0 1.5rem 0;
   }
 
   & .content-org-logo {
-    padding: 1rem;
-    border: 8px solid #1f2c4c;
+    padding: 0.5rem;
+    border: 5px solid #1f2c4c;
     height: max-content;
     width: max-content;
     border-radius: 20px;
     cursor: pointer;
 
-    & > img {
+    & img {
       width: 100px;
       height: 100px;
       object-fit: cover;
+      object-position: center;
     }
   }
 
@@ -148,7 +143,7 @@
     cursor: pointer;
 
     & > h3 {
-      font-size: 2rem;
+      font-size: 1.6rem;
       font-weight: 600;
       line-height: 42px;
     }
@@ -171,6 +166,11 @@
     & > button:hover {
       transform: translateX(2px);
     }
+  }
+
+  @media screen and (max-width: 886px) {
+    padding-bottom: 3rem;
+    padding-left: 0px;
   }
 }
 
@@ -269,6 +269,25 @@
   * {
     --home-orglist-text-p-fontsize: 0.75rem;
   }
+
+  .home-orglist-content_container {
+    height: fit-content;
+    overflow-x: unset;
+    overflow-y: unset;
+    & > .home-orglist-content-grid {
+      grid-template-columns: unset;
+      grid-template-rows: max-content 1fr;
+      justify-items: center;
+
+      margin-right: 3px;
+
+      & > .home-orglist-arrow_icon {
+        display: none;
+      }
+
+      row-gap: 1rem;
+    }
+  }
   .home-orglist-chap-desc {
     & > .chap-desc-text {
       width: 50ch;
@@ -296,22 +315,6 @@
 
     column-gap: unset;
     row-gap: 1rem;
-  }
-
-  .home-orglist-content_container {
-    & > .home-orglist-content-grid {
-      grid-template-columns: unset;
-      grid-template-rows: max-content 1fr;
-      justify-items: center;
-
-      margin-right: 3px;
-
-      & > .home-orglist-arrow_icon {
-        display: none;
-      }
-
-      row-gap: 1rem;
-    }
   }
 
   .home-orglist-back-btn {
@@ -344,7 +347,7 @@
     width: 100%;
   }
   .content-org-desc {
-    width: calc(100vw - 25px);
+    width: calc(100vw - 38px);
   }
   .home-orglist-divider {
     width: 90vw !important;
